--- a/public/Nitrocid.Addons/Nitrocid.ShellPacks/Resources/Languages/Output/Localizations.en-GB.resx
+++ b/public/Nitrocid.Addons/Nitrocid.ShellPacks/Resources/Languages/Output/Localizations.en-GB.resx
@@ -2040,5 +2040,41 @@
   <data name="NKS_SHELLPACKS_JSON_COMMAND_SET_ARGUMENT_JSONVALUE_DESC" xml:space="preserve">
     <value>JSON value</value>
   </data>
+  <data name="NKS_SHELLPACKS_FTPSFTP_FMCLI_HELP01_TITLE" xml:space="preserve">
+    <value>Managing FTP and SFTP servers</value>
+  </data>
+  <data name="NKS_SHELLPACKS_FTPSFTP_FMCLI_HELP01_DESC" xml:space="preserve">
+    <value>Managing your FTP and SFTP servers in an interactive TUI</value>
+  </data>
+  <data name="NKS_SHELLPACKS_FTPSFTP_FMCLI_HELP01_BODY" xml:space="preserve">
+    <value>FTP and SFTP servers can be managed by either the command-line interface or by the interactive TUI built for both server protocols. The TUI set provides two separate user interfaces: FTP management TUI and SFTP management TUI. The TUIs are double-paned, meaning that you can work with the two directories at once, just like Total Commander. You can also perform file operations, such as download, upload, copy, move, delete, and so on.</value>
+  </data>
+  <data name="NKS_SHELLPACKS_MAIL_TUI_HELP01_TITLE" xml:space="preserve">
+    <value>Managing e-mail messages</value>
+  </data>
+  <data name="NKS_SHELLPACKS_MAIL_TUI_HELP01_DESC" xml:space="preserve">
+    <value>Mail TUI manages your e-mail messages</value>
+  </data>
+  <data name="NKS_SHELLPACKS_MAIL_TUI_HELP01_BODY" xml:space="preserve">
+    <value>To work with your e-mail messages more efficiently, you can use this interactive TUI to read your messages more efficiently with just a simple textual user interface, with the first pane listing the directories, and the second pane listing the messages. When you open a message by pressing ENTER, you&apos;ll get a text message in an infobox.</value>
+  </data>
+  <data name="NKS_SHELLPACKS_MAIL_TUI_HELP02_TITLE" xml:space="preserve">
+    <value>Mail automatic detection</value>
+  </data>
+  <data name="NKS_SHELLPACKS_MAIL_TUI_HELP02_DESC" xml:space="preserve">
+    <value>Automatic detection of the mail servers</value>
+  </data>
+  <data name="NKS_SHELLPACKS_MAIL_TUI_HELP02_BODY" xml:space="preserve">
+    <value>The mail system in general automatically detects the mail servers that are going to be used based on just your e-mail address that you used when you sign in to your account. Using the Thunderbird Autoconfig as the backend of the configuration module, your mail server will be automatically determined.</value>
+  </data>
+  <data name="NKS_SHELLPACKS_RSS_READERCLI_HELP01_TITLE" xml:space="preserve">
+    <value>Reading RSS feeds</value>
+  </data>
+  <data name="NKS_SHELLPACKS_RSS_READERCLI_HELP01_DESC" xml:space="preserve">
+    <value>Your RSS feeds in one screen</value>
+  </data>
+  <data name="NKS_SHELLPACKS_RSS_READERCLI_HELP01_BODY" xml:space="preserve">
+    <value>Reading the RSS feeds in this interactive TUI became easier! You can select an RSS feed and read the article directly at the right pane.</value>
+  </data>
 
 </root>
