--- a/public/Nitrocid.Addons/Nitrocid.ShellPacks/Resources/Languages/Output/Localizations.it.resx
+++ b/public/Nitrocid.Addons/Nitrocid.ShellPacks/Resources/Languages/Output/Localizations.it.resx
@@ -2040,5 +2040,41 @@
   <data name="NKS_SHELLPACKS_JSON_COMMAND_SET_ARGUMENT_JSONVALUE_DESC" xml:space="preserve">
     <value>Valore JSON</value>
   </data>
+  <data name="NKS_SHELLPACKS_FTPSFTP_FMCLI_HELP01_TITLE" xml:space="preserve">
+    <value>Gestione dei server FTP e SFTP</value>
+  </data>
+  <data name="NKS_SHELLPACKS_FTPSFTP_FMCLI_HELP01_DESC" xml:space="preserve">
+    <value>Gestione dei server FTP e SFTP in una TUI interattiva</value>
+  </data>
+  <data name="NKS_SHELLPACKS_FTPSFTP_FMCLI_HELP01_BODY" xml:space="preserve">
+    <value>I server FTP e SFTP possono essere gestiti tramite l&apos;interfaccia a riga di comando o tramite la TUI interattiva creata per entrambi i protocolli server. Il set di TUI fornisce due interfacce utente separate: la TUI di gestione FTP e la TUI di gestione SFTP. Le TUI sono a doppio pannello, il che significa che è possibile lavorare con entrambe le directory contemporaneamente, proprio come in Total Commander. È inoltre possibile eseguire operazioni sui file, come download, upload, copia, spostamento, eliminazione e così via.</value>
+  </data>
+  <data name="NKS_SHELLPACKS_MAIL_TUI_HELP01_TITLE" xml:space="preserve">
+    <value>Gestione dei messaggi di posta elettronica</value>
+  </data>
+  <data name="NKS_SHELLPACKS_MAIL_TUI_HELP01_DESC" xml:space="preserve">
+    <value>La TUI di posta elettronica gestisce i messaggi di posta elettronica</value>
+  </data>
+  <data name="NKS_SHELLPACKS_MAIL_TUI_HELP01_BODY" xml:space="preserve">
+    <value>Per gestire i messaggi di posta elettronica in modo più efficiente, è possibile utilizzare questa TUI interattiva per leggere i messaggi in modo più efficiente con una semplice interfaccia utente testuale, con il primo pannello che elenca le directory e il secondo pannello che elenca i messaggi. Quando si apre un messaggio premendo INVIO, si riceve un messaggio di testo in una casella informativa.</value>
+  </data>
+  <data name="NKS_SHELLPACKS_MAIL_TUI_HELP02_TITLE" xml:space="preserve">
+    <value>Rilevamento automatico della posta</value>
+  </data>
+  <data name="NKS_SHELLPACKS_MAIL_TUI_HELP02_DESC" xml:space="preserve">
+    <value>Rilevamento automatico dei server di posta</value>
+  </data>
+  <data name="NKS_SHELLPACKS_MAIL_TUI_HELP02_BODY" xml:space="preserve">
+    <value>In genere, il sistema di posta rileva automaticamente i server di posta che verranno utilizzati in base all&apos;indirizzo email utilizzato al momento dell&apos;accesso al proprio account. Utilizzando Thunderbird Autoconfig come backend del modulo di configurazione, il server di posta verrà determinato automaticamente.</value>
+  </data>
+  <data name="NKS_SHELLPACKS_RSS_READERCLI_HELP01_TITLE" xml:space="preserve">
+    <value>Lettura dei feed RSS</value>
+  </data>
+  <data name="NKS_SHELLPACKS_RSS_READERCLI_HELP01_DESC" xml:space="preserve">
+    <value>I tuoi feed RSS in un&apos;unica schermata</value>
+  </data>
+  <data name="NKS_SHELLPACKS_RSS_READERCLI_HELP01_BODY" xml:space="preserve">
+    <value>Leggere i feed RSS in questa interfaccia utente interattiva è diventato più semplice! Puoi selezionare un feed RSS e leggere l&apos;articolo direttamente nel riquadro di destra.</value>
+  </data>
 
 </root>
