--- a/public/Nitrocid.Addons/Nitrocid.ShellPacks/Resources/Languages/grk.json
+++ b/public/Nitrocid.Addons/Nitrocid.ShellPacks/Resources/Languages/grk.json
@@ -2570,6 +2570,54 @@
     {
       "loc": "NKS_SHELLPACKS_JSON_COMMAND_SET_ARGUMENT_JSONVALUE_DESC",
       "text": "Τιμή JSON"
+    },
+    {
+      "loc": "NKS_SHELLPACKS_FTPSFTP_FMCLI_HELP01_TITLE",
+      "text": "Διαχείριση διακομιστών FTP και SFTP"
+    },
+    {
+      "loc": "NKS_SHELLPACKS_FTPSFTP_FMCLI_HELP01_DESC",
+      "text": "Διαχείριση των διακομιστών FTP και SFTP σε ένα διαδραστικό TUI"
+    },
+    {
+      "loc": "NKS_SHELLPACKS_FTPSFTP_FMCLI_HELP01_BODY",
+      "text": "Οι διακομιστές FTP και SFTP μπορούν να διαχειριστούν είτε από τη διεπαφή γραμμής εντολών είτε από το διαδραστικό TUI που έχει δημιουργηθεί και για τα δύο πρωτόκολλα διακομιστή. Το σετ TUI παρέχει δύο ξεχωριστά περιβάλλοντα χρήστη: TUI διαχείρισης FTP και TUI διαχείρισης SFTP. Τα TUI έχουν διπλό πλαίσιο, που σημαίνει ότι μπορείτε να εργαστείτε με τους δύο καταλόγους ταυτόχρονα, όπως ακριβώς το Total Commander. Μπορείτε επίσης να εκτελέσετε λειτουργίες αρχείων, όπως λήψη, μεταφόρτωση, αντιγραφή, μετακίνηση, διαγραφή και ούτω καθεξής."
+    },
+    {
+      "loc": "NKS_SHELLPACKS_MAIL_TUI_HELP01_TITLE",
+      "text": "Διαχείριση μηνυμάτων ηλεκτρονικού ταχυδρομείου"
+    },
+    {
+      "loc": "NKS_SHELLPACKS_MAIL_TUI_HELP01_DESC",
+      "text": "Το TUI αλληλογραφίας διαχειρίζεται τα μηνύματα ηλεκτρονικού ταχυδρομείου σας"
+    },
+    {
+      "loc": "NKS_SHELLPACKS_MAIL_TUI_HELP01_BODY",
+      "text": "Για να εργαστείτε με τα μηνύματα ηλεκτρονικού ταχυδρομείου σας πιο αποτελεσματικά, μπορείτε να χρησιμοποιήσετε αυτό το διαδραστικό TUI για να διαβάζετε τα μηνύματά σας πιο αποτελεσματικά με ένα απλό περιβάλλον χρήστη κειμένου, με το πρώτο παράθυρο να παραθέτει τους καταλόγους και το δεύτερο παράθυρο να παραθέτει τα μηνύματα. Όταν ανοίγετε ένα μήνυμα πατώντας ENTER, θα λάβετε ένα μήνυμα κειμένου σε ένα πλαίσιο πληροφοριών."
+    },
+    {
+      "loc": "NKS_SHELLPACKS_MAIL_TUI_HELP02_TITLE",
+      "text": "Αυτόματη ανίχνευση αλληλογραφίας"
+    },
+    {
+      "loc": "NKS_SHELLPACKS_MAIL_TUI_HELP02_DESC",
+      "text": "Αυτόματη ανίχνευση των διακομιστών αλληλογραφίας"
+    },
+    {
+      "loc": "NKS_SHELLPACKS_MAIL_TUI_HELP02_BODY",
+      "text": "Το σύστημα αλληλογραφίας γενικά ανιχνεύει αυτόματα τους διακομιστές αλληλογραφίας που θα χρησιμοποιηθούν μόνο με βάση τη διεύθυνση ηλεκτρονικού ταχυδρομείου που χρησιμοποιήσατε κατά την είσοδό σας στον λογαριασμό σας. Χρησιμοποιώντας το Thunderbird Autoconfig ως backend της ενότητας διαμόρφωσης, ο διακομιστής αλληλογραφίας σας θα προσδιοριστεί αυτόματα."
+    },
+    {
+      "loc": "NKS_SHELLPACKS_RSS_READERCLI_HELP01_TITLE",
+      "text": "Ανάγνωση ροών RSS"
+    },
+    {
+      "loc": "NKS_SHELLPACKS_RSS_READERCLI_HELP01_DESC",
+      "text": "Οι ροές RSS σας σε μία οθόνη"
+    },
+    {
+      "loc": "NKS_SHELLPACKS_RSS_READERCLI_HELP01_BODY",
+      "text": "Η ανάγνωση των ροών RSS σε αυτό το διαδραστικό TUI έγινε ευκολότερη! Μπορείτε να επιλέξετε μια ροή RSS και να διαβάσετε το άρθρο απευθείας στο δεξί παράθυρο."
     }
   ]
 }
