--- a/public/Nitrocid.Addons/Nitrocid.ShellPacks/Resources/Languages/ukr.json
+++ b/public/Nitrocid.Addons/Nitrocid.ShellPacks/Resources/Languages/ukr.json
@@ -2569,6 +2569,54 @@
     {
       "loc": "NKS_SHELLPACKS_JSON_COMMAND_SET_ARGUMENT_JSONVALUE_DESC",
       "text": "Значення JSON"
+    },
+    {
+      "loc": "NKS_SHELLPACKS_FTPSFTP_FMCLI_HELP01_TITLE",
+      "text": "Керування FTP- та SFTP-серверами"
+    },
+    {
+      "loc": "NKS_SHELLPACKS_FTPSFTP_FMCLI_HELP01_DESC",
+      "text": "Керування FTP- та SFTP-серверами в інтерактивному TUI"
+    },
+    {
+      "loc": "NKS_SHELLPACKS_FTPSFTP_FMCLI_HELP01_BODY",
+      "text": "FTP- та SFTP-серверами можна керувати або за допомогою інтерфейсу командного рядка, або за допомогою інтерактивного TUI, створеного для обох протоколів сервера. Набір TUI надає два окремі інтерфейси користувача: TUI керування FTP та TUI керування SFTP. TUI мають дві панелі, що означає, що ви можете працювати з двома каталогами одночасно, як і Total Commander. Ви також можете виконувати операції з файлами, такі як завантаження, вивантаження, копіювання, переміщення, видалення тощо."
+    },
+    {
+      "loc": "NKS_SHELLPACKS_MAIL_TUI_HELP01_TITLE",
+      "text": "Керування електронними листами"
+    },
+    {
+      "loc": "NKS_SHELLPACKS_MAIL_TUI_HELP01_DESC",
+      "text": "Поштовий TUI керує вашими електронними листами"
+    },
+    {
+      "loc": "NKS_SHELLPACKS_MAIL_TUI_HELP01_BODY",
+      "text": "Щоб ефективніше працювати з електронними листами, ви можете використовувати цей інтерактивний TUI для ефективнішого читання повідомлень за допомогою простого текстового інтерфейсу користувача, де перша панель містить список каталогів, а друга панель – список повідомлень. Коли ви відкриваєте повідомлення, натискаючи ENTER, ви отримуєте текстове повідомлення в інформаційному полі."
+    },
+    {
+      "loc": "NKS_SHELLPACKS_MAIL_TUI_HELP02_TITLE",
+      "text": "Автоматичне виявлення пошти"
+    },
+    {
+      "loc": "NKS_SHELLPACKS_MAIL_TUI_HELP02_DESC",
+      "text": "Автоматичне виявлення поштових серверів"
+    },
+    {
+      "loc": "NKS_SHELLPACKS_MAIL_TUI_HELP02_BODY",
+      "text": "Поштова система загалом автоматично визначає поштові сервери, які будуть використовуватися, на основі вашої адреси електронної пошти, яку ви використовували під час входу до свого облікового запису. Використовуючи автоматичну конфігурацію Thunderbird як серверну частину модуля конфігурації, ваш поштовий сервер буде визначено автоматично."
+    },
+    {
+      "loc": "NKS_SHELLPACKS_RSS_READERCLI_HELP01_TITLE",
+      "text": "Читання RSS-каналів"
+    },
+    {
+      "loc": "NKS_SHELLPACKS_RSS_READERCLI_HELP01_DESC",
+      "text": "Ваші RSS-канали на одному екрані"
+    },
+    {
+      "loc": "NKS_SHELLPACKS_RSS_READERCLI_HELP01_BODY",
+      "text": "Читання RSS-каналів у цьому інтерактивному TUI стало ще простішим! Ви можете вибрати RSS-канал і прочитати статтю безпосередньо на правій панелі."
     }
   ]
 }
