--- a/public/Nitrocid.Addons/Nitrocid.ShellPacks/Resources/Languages/Output/Localizations.es.resx
+++ b/public/Nitrocid.Addons/Nitrocid.ShellPacks/Resources/Languages/Output/Localizations.es.resx
@@ -2040,5 +2040,41 @@
   <data name="NKS_SHELLPACKS_JSON_COMMAND_SET_ARGUMENT_JSONVALUE_DESC" xml:space="preserve">
     <value>Valor JSON</value>
   </data>
+  <data name="NKS_SHELLPACKS_FTPSFTP_FMCLI_HELP01_TITLE" xml:space="preserve">
+    <value>Administración de servidores FTP y SFTP</value>
+  </data>
+  <data name="NKS_SHELLPACKS_FTPSFTP_FMCLI_HELP01_DESC" xml:space="preserve">
+    <value>Administración de sus servidores FTP y SFTP en una interfaz de usuario interactiva</value>
+  </data>
+  <data name="NKS_SHELLPACKS_FTPSFTP_FMCLI_HELP01_BODY" xml:space="preserve">
+    <value>Los servidores FTP y SFTP se pueden administrar mediante la interfaz de línea de comandos o mediante la interfaz de usuario interactiva diseñada para ambos protocolos de servidor. La interfaz de usuario interactiva (UI) ofrece dos interfaces de usuario independientes: la interfaz de usuario de FTP y la interfaz de usuario de SFTP. Las UI tienen doble panel, lo que significa que puede trabajar con los dos directorios a la vez, al igual que Total Commander. También puede realizar operaciones con archivos, como descargar, subir, copiar, mover, eliminar, etc.</value>
+  </data>
+  <data name="NKS_SHELLPACKS_MAIL_TUI_HELP01_TITLE" xml:space="preserve">
+    <value>Administración de correo electrónico</value>
+  </data>
+  <data name="NKS_SHELLPACKS_MAIL_TUI_HELP01_DESC" xml:space="preserve">
+    <value>La UI de correo administra sus correos electrónicos</value>
+  </data>
+  <data name="NKS_SHELLPACKS_MAIL_TUI_HELP01_BODY" xml:space="preserve">
+    <value>Para trabajar con sus correos electrónicos de forma más eficiente, puede usar esta UI interactiva para leer sus mensajes de forma más eficiente con una interfaz de usuario textual sencilla: el primer panel muestra los directorios y el segundo, los mensajes. Al abrir un mensaje pulsando INTRO, verá un mensaje de texto en un cuadro de información.</value>
+  </data>
+  <data name="NKS_SHELLPACKS_MAIL_TUI_HELP02_TITLE" xml:space="preserve">
+    <value>Detección automática de correo</value>
+  </data>
+  <data name="NKS_SHELLPACKS_MAIL_TUI_HELP02_DESC" xml:space="preserve">
+    <value>Detección automática de servidores de correo</value>
+  </data>
+  <data name="NKS_SHELLPACKS_MAIL_TUI_HELP02_BODY" xml:space="preserve">
+    <value>El sistema de correo, en general, detecta automáticamente los servidores de correo que se utilizarán basándose únicamente en la dirección de correo electrónico que utilizó al iniciar sesión en su cuenta. Al usar la configuración automática de Thunderbird como backend del módulo de configuración, su servidor de correo se determinará automáticamente.</value>
+  </data>
+  <data name="NKS_SHELLPACKS_RSS_READERCLI_HELP01_TITLE" xml:space="preserve">
+    <value>Lectura de feeds RSS</value>
+  </data>
+  <data name="NKS_SHELLPACKS_RSS_READERCLI_HELP01_DESC" xml:space="preserve">
+    <value>Sus feeds RSS en una sola pantalla</value>
+  </data>
+  <data name="NKS_SHELLPACKS_RSS_READERCLI_HELP01_BODY" xml:space="preserve">
+    <value>¡Leer los feeds RSS en esta interfaz de usuario interactiva ahora es más fácil! Puede seleccionar un feed RSS y leer el artículo directamente en el panel derecho.</value>
+  </data>
 
 </root>
