--- a/public/Nitrocid.Addons/Nitrocid.ShellPacks/Resources/Languages/Output/Localizations.ga.resx
+++ b/public/Nitrocid.Addons/Nitrocid.ShellPacks/Resources/Languages/Output/Localizations.ga.resx
@@ -2040,5 +2040,41 @@
   <data name="NKS_SHELLPACKS_JSON_COMMAND_SET_ARGUMENT_JSONVALUE_DESC" xml:space="preserve">
     <value>luach JSON</value>
   </data>
+  <data name="NKS_SHELLPACKS_FTPSFTP_FMCLI_HELP01_TITLE" xml:space="preserve">
+    <value>Bainistiú freastalaithe FTP agus SFTP</value>
+  </data>
+  <data name="NKS_SHELLPACKS_FTPSFTP_FMCLI_HELP01_DESC" xml:space="preserve">
+    <value>Bainistiú do fhreastalaithe FTP agus SFTP i TUI idirghníomhach</value>
+  </data>
+  <data name="NKS_SHELLPACKS_FTPSFTP_FMCLI_HELP01_BODY" xml:space="preserve">
+    <value>Is féidir freastalaithe FTP agus SFTP a bhainistiú tríd an gcomhéadan líne ordaithe nó tríd an TUI idirghníomhach atá tógtha do na prótacail freastalaí araon. Soláthraíonn an tacar TUI dhá chomhéadan úsáideora ar leithligh: TUI bainistíochta FTP agus TUI bainistíochta SFTP. Tá na TUIanna dé-phainéalaithe, rud a chiallaíonn gur féidir leat oibriú leis an dá eolaire ag an am céanna, díreach cosúil le Total Commander. Is féidir leat oibríochtaí comhad a dhéanamh freisin, amhail íoslódáil, uaslódáil, cóipeáil, bogadh, scriosadh, agus mar sin de.</value>
+  </data>
+  <data name="NKS_SHELLPACKS_MAIL_TUI_HELP01_TITLE" xml:space="preserve">
+    <value>Bainistiú teachtaireachtaí ríomhphoist</value>
+  </data>
+  <data name="NKS_SHELLPACKS_MAIL_TUI_HELP01_DESC" xml:space="preserve">
+    <value>Bainistíonn TUI Mail do theachtaireachtaí ríomhphoist</value>
+  </data>
+  <data name="NKS_SHELLPACKS_MAIL_TUI_HELP01_BODY" xml:space="preserve">
+    <value>Chun oibriú le do theachtaireachtaí ríomhphoist ar bhealach níos éifeachtaí, is féidir leat an TUI idirghníomhach seo a úsáid chun do theachtaireachtaí a léamh ar bhealach níos éifeachtaí le comhéadan úsáideora téacsúil simplí, agus na heolairí liostaithe sa chéad phainéal, agus na teachtaireachtaí liostaithe sa dara painéal. Nuair a osclaíonn tú teachtaireacht trí ENTER a bhrú, gheobhaidh tú teachtaireacht téacs i mbosca eolais.</value>
+  </data>
+  <data name="NKS_SHELLPACKS_MAIL_TUI_HELP02_TITLE" xml:space="preserve">
+    <value>Brath uathoibríoch ríomhphoist</value>
+  </data>
+  <data name="NKS_SHELLPACKS_MAIL_TUI_HELP02_DESC" xml:space="preserve">
+    <value>Brath uathoibríoch na bhfreastalaithe ríomhphoist</value>
+  </data>
+  <data name="NKS_SHELLPACKS_MAIL_TUI_HELP02_BODY" xml:space="preserve">
+    <value>Go ginearálta, braitheann an córas ríomhphoist go huathoibríoch na freastalaithe ríomhphoist a úsáidfear bunaithe ar do sheoladh ríomhphoist a d&apos;úsáid tú nuair a shínigh tú isteach i do chuntas. Trí Thunderbird Autoconfig a úsáid mar chúlra an mhodúil chumraíochta, cinnfear do fhreastalaí ríomhphoist go huathoibríoch.</value>
+  </data>
+  <data name="NKS_SHELLPACKS_RSS_READERCLI_HELP01_TITLE" xml:space="preserve">
+    <value>Fothaí RSS a léamh</value>
+  </data>
+  <data name="NKS_SHELLPACKS_RSS_READERCLI_HELP01_DESC" xml:space="preserve">
+    <value>Do fhothaí RSS in aon scáileán amháin</value>
+  </data>
+  <data name="NKS_SHELLPACKS_RSS_READERCLI_HELP01_BODY" xml:space="preserve">
+    <value>Tá sé níos éasca anois na fothaí RSS a léamh sa TUI idirghníomhach seo! Is féidir leat fotha RSS a roghnú agus an t-alt a léamh go díreach sa phána ar dheis.</value>
+  </data>
 
 </root>
