--- a/public/Nitrocid.Addons/Nitrocid.ShellPacks/Resources/Languages/Output/Localizations.id.resx
+++ b/public/Nitrocid.Addons/Nitrocid.ShellPacks/Resources/Languages/Output/Localizations.id.resx
@@ -2040,5 +2040,41 @@
   <data name="NKS_SHELLPACKS_JSON_COMMAND_SET_ARGUMENT_JSONVALUE_DESC" xml:space="preserve">
     <value>Nilai JSON</value>
   </data>
+  <data name="NKS_SHELLPACKS_FTPSFTP_FMCLI_HELP01_TITLE" xml:space="preserve">
+    <value>Mengelola server FTP dan SFTP</value>
+  </data>
+  <data name="NKS_SHELLPACKS_FTPSFTP_FMCLI_HELP01_DESC" xml:space="preserve">
+    <value>Mengelola server FTP dan SFTP Anda dalam TUI interaktif</value>
+  </data>
+  <data name="NKS_SHELLPACKS_FTPSFTP_FMCLI_HELP01_BODY" xml:space="preserve">
+    <value>Server FTP dan SFTP dapat dikelola melalui antarmuka baris perintah atau TUI interaktif yang dirancang untuk kedua protokol server. Rangkaian TUI menyediakan dua antarmuka pengguna terpisah: TUI manajemen FTP dan TUI manajemen SFTP. TUI ini memiliki panel ganda, yang berarti Anda dapat bekerja dengan dua direktori sekaligus, seperti Total Commander. Anda juga dapat melakukan operasi berkas, seperti mengunduh, mengunggah, menyalin, memindahkan, menghapus, dan sebagainya.</value>
+  </data>
+  <data name="NKS_SHELLPACKS_MAIL_TUI_HELP01_TITLE" xml:space="preserve">
+    <value>Mengelola pesan email</value>
+  </data>
+  <data name="NKS_SHELLPACKS_MAIL_TUI_HELP01_DESC" xml:space="preserve">
+    <value>TUI Mail mengelola pesan email Anda</value>
+  </data>
+  <data name="NKS_SHELLPACKS_MAIL_TUI_HELP01_BODY" xml:space="preserve">
+    <value>Untuk mengelola pesan email Anda dengan lebih efisien, Anda dapat menggunakan TUI interaktif ini untuk membaca pesan Anda secara lebih efisien hanya dengan antarmuka pengguna tekstual sederhana, dengan panel pertama berisi direktori, dan panel kedua berisi pesan. Saat Anda membuka pesan dengan menekan ENTER, Anda akan mendapatkan pesan teks di kotak info.</value>
+  </data>
+  <data name="NKS_SHELLPACKS_MAIL_TUI_HELP02_TITLE" xml:space="preserve">
+    <value>Deteksi Email Otomatis</value>
+  </data>
+  <data name="NKS_SHELLPACKS_MAIL_TUI_HELP02_DESC" xml:space="preserve">
+    <value>Deteksi Otomatis Server Email</value>
+  </data>
+  <data name="NKS_SHELLPACKS_MAIL_TUI_HELP02_BODY" xml:space="preserve">
+    <value>Sistem email secara umum secara otomatis mendeteksi server email yang akan digunakan berdasarkan alamat email yang Anda gunakan saat masuk ke akun Anda. Dengan menggunakan Thunderbird Autoconfig sebagai backend modul konfigurasi, server email Anda akan ditentukan secara otomatis.</value>
+  </data>
+  <data name="NKS_SHELLPACKS_RSS_READERCLI_HELP01_TITLE" xml:space="preserve">
+    <value>Membaca RSS feed</value>
+  </data>
+  <data name="NKS_SHELLPACKS_RSS_READERCLI_HELP01_DESC" xml:space="preserve">
+    <value>RSS feed Anda dalam satu layar</value>
+  </data>
+  <data name="NKS_SHELLPACKS_RSS_READERCLI_HELP01_BODY" xml:space="preserve">
+    <value>Membaca RSS feed di TUI interaktif ini menjadi lebih mudah! Anda dapat memilih RSS feed dan membaca artikel langsung di panel kanan.</value>
+  </data>
 
 </root>
