--- a/public/Nitrocid.Addons/Nitrocid.ShellPacks/Resources/Languages/Output/Localizations.la.resx
+++ b/public/Nitrocid.Addons/Nitrocid.ShellPacks/Resources/Languages/Output/Localizations.la.resx
@@ -2040,5 +2040,41 @@
   <data name="NKS_SHELLPACKS_JSON_COMMAND_SET_ARGUMENT_JSONVALUE_DESC" xml:space="preserve">
     <value>JSON value</value>
   </data>
+  <data name="NKS_SHELLPACKS_FTPSFTP_FMCLI_HELP01_TITLE" xml:space="preserve">
+    <value>Administratio servorum FTP et SFTP</value>
+  </data>
+  <data name="NKS_SHELLPACKS_FTPSFTP_FMCLI_HELP01_DESC" xml:space="preserve">
+    <value>Administratio servorum FTP et SFTP in TUI interactiva</value>
+  </data>
+  <data name="NKS_SHELLPACKS_FTPSFTP_FMCLI_HELP01_BODY" xml:space="preserve">
+    <value>Servitores FTP et SFTP administrari possunt vel per interfaciem lineae mandati vel per TUI interactivam pro utroque protocollo servorum constructam. Series TUI duas interfacies usoris separatas praebet: TUI administrationis FTP et TUI administrationis SFTP. TUI dupliciter patent, quod significat te cum duobus directoriis simul laborare posse, sicut Total Commander. Etiam operationes fasciculorum perficere potes, ut detrahere, imponere, copiare, movere, delere, et cetera.</value>
+  </data>
+  <data name="NKS_SHELLPACKS_MAIL_TUI_HELP01_TITLE" xml:space="preserve">
+    <value>Administratio epistularum electronicarum</value>
+  </data>
+  <data name="NKS_SHELLPACKS_MAIL_TUI_HELP01_DESC" xml:space="preserve">
+    <value>TUI Epistularum electronicarum epistulas tuas administrat</value>
+  </data>
+  <data name="NKS_SHELLPACKS_MAIL_TUI_HELP01_BODY" xml:space="preserve">
+    <value>Ut cum epistulis tuis electronicis efficacius opereris, hanc TUI interactivam uti potes ad epistulas tuas efficacius legendas cum simplici interfacie usoris textuali, cum primo panello directoria enumerante, et secundo panello epistulas enumerante. Cum epistulam aperis premendo ENTER, epistulam textualem in capsa informationis accipies.</value>
+  </data>
+  <data name="NKS_SHELLPACKS_MAIL_TUI_HELP02_TITLE" xml:space="preserve">
+    <value>Detectio automatica epistularum</value>
+  </data>
+  <data name="NKS_SHELLPACKS_MAIL_TUI_HELP02_DESC" xml:space="preserve">
+    <value>Detectio automatica servorum epistularum</value>
+  </data>
+  <data name="NKS_SHELLPACKS_MAIL_TUI_HELP02_BODY" xml:space="preserve">
+    <value>Systema epistularum plerumque servos epistularum qui adhibebuntur automatice detegit, solum secundum inscriptionem electronicam quam usus es cum rationem tuam ingressus es. Utente Thunderbird Autoconfig ut parte administrativa moduli configurationis, servus epistularum tuus automatice determinabitur.</value>
+  </data>
+  <data name="NKS_SHELLPACKS_RSS_READERCLI_HELP01_TITLE" xml:space="preserve">
+    <value>Lectio canalium RSS</value>
+  </data>
+  <data name="NKS_SHELLPACKS_RSS_READERCLI_HELP01_DESC" xml:space="preserve">
+    <value>Tui canales RSS in uno velo</value>
+  </data>
+  <data name="NKS_SHELLPACKS_RSS_READERCLI_HELP01_BODY" xml:space="preserve">
+    <value>Lectio canalium RSS in hac interactiva TUI facilior facta est! Canalem RSS eligere et articulum directe in dextro tabula legere potes.</value>
+  </data>
 
 </root>
