--- a/public/Nitrocid.Addons/Nitrocid.ShellPacks/Resources/Languages/ger.json
+++ b/public/Nitrocid.Addons/Nitrocid.ShellPacks/Resources/Languages/ger.json
@@ -2578,6 +2578,54 @@
     {
       "loc": "NKS_SHELLPACKS_JSON_COMMAND_SET_ARGUMENT_JSONVALUE_DESC",
       "text": "JSON-Wert"
+    },
+    {
+      "loc": "NKS_SHELLPACKS_FTPSFTP_FMCLI_HELP01_TITLE",
+      "text": "FTP- und SFTP-Server verwalten"
+    },
+    {
+      "loc": "NKS_SHELLPACKS_FTPSFTP_FMCLI_HELP01_DESC",
+      "text": "Ihre FTP- und SFTP-Server in einer interaktiven Benutzeroberfläche verwalten"
+    },
+    {
+      "loc": "NKS_SHELLPACKS_FTPSFTP_FMCLI_HELP01_BODY",
+      "text": "FTP- und SFTP-Server lassen sich entweder über die Kommandozeile oder über die interaktive Benutzeroberfläche (TUI) verwalten, die für beide Serverprotokolle entwickelt wurde. Die TUI bietet zwei separate Benutzeroberflächen: eine für die FTP-Verwaltung und eine für die SFTP-Verwaltung. Die TUIs sind zweigeteilt, sodass Sie wie bei Total Commander gleichzeitig mit beiden Verzeichnissen arbeiten können. Sie können außerdem Dateivorgänge wie Herunterladen, Hochladen, Kopieren, Verschieben, Löschen usw. durchführen."
+    },
+    {
+      "loc": "NKS_SHELLPACKS_MAIL_TUI_HELP01_TITLE",
+      "text": "E-Mail-Nachrichten verwalten"
+    },
+    {
+      "loc": "NKS_SHELLPACKS_MAIL_TUI_HELP01_DESC",
+      "text": "Die Mail-TUI verwaltet Ihre E-Mails"
+    },
+    {
+      "loc": "NKS_SHELLPACKS_MAIL_TUI_HELP01_BODY",
+      "text": "Um Ihre E-Mails effizienter zu bearbeiten, können Sie diese interaktive TUI verwenden. Dank der einfachen Textoberfläche lesen Sie Ihre Nachrichten übersichtlicher. Im ersten Bereich werden die Verzeichnisse, im zweiten die Nachrichten angezeigt. Wenn Sie eine Nachricht durch Drücken der Eingabetaste öffnen, wird eine Textnachricht in einem Infofeld angezeigt."
+    },
+    {
+      "loc": "NKS_SHELLPACKS_MAIL_TUI_HELP02_TITLE",
+      "text": "Automatische E-Mail-Server-Erkennung"
+    },
+    {
+      "loc": "NKS_SHELLPACKS_MAIL_TUI_HELP02_DESC",
+      "text": "Automatische Erkennung der Mailserver"
+    },
+    {
+      "loc": "NKS_SHELLPACKS_MAIL_TUI_HELP02_BODY",
+      "text": "Das E-Mail-System erkennt die verwendeten Mailserver in der Regel automatisch anhand Ihrer E-Mail-Adresse, die Sie beim Anmelden in Ihrem Konto angegeben haben. Mit Thunderbird Autoconfig als Backend des Konfigurationsmoduls wird Ihr Mailserver automatisch ermittelt."
+    },
+    {
+      "loc": "NKS_SHELLPACKS_RSS_READERCLI_HELP01_TITLE",
+      "text": "RSS-Feeds lesen"
+    },
+    {
+      "loc": "NKS_SHELLPACKS_RSS_READERCLI_HELP01_DESC",
+      "text": "Ihre RSS-Feeds auf einen Blick"
+    },
+    {
+      "loc": "NKS_SHELLPACKS_RSS_READERCLI_HELP01_BODY",
+      "text": "Das Lesen von RSS-Feeds ist in dieser interaktiven Benutzeroberfläche jetzt noch einfacher! Wählen Sie einfach einen RSS-Feed aus und lesen Sie den Artikel direkt im rechten Bereich."
     }
   ]
 }
