--- a/public/Nitrocid.Addons/Nitrocid.ShellPacks/Resources/Languages/ind.json
+++ b/public/Nitrocid.Addons/Nitrocid.ShellPacks/Resources/Languages/ind.json
@@ -2569,6 +2569,54 @@
     {
       "loc": "NKS_SHELLPACKS_JSON_COMMAND_SET_ARGUMENT_JSONVALUE_DESC",
       "text": "json maan"
+    },
+    {
+      "loc": "NKS_SHELLPACKS_FTPSFTP_FMCLI_HELP01_TITLE",
+      "text": "ftp aur sftp sarvar mainej karana"
+    },
+    {
+      "loc": "NKS_SHELLPACKS_FTPSFTP_FMCLI_HELP01_DESC",
+      "text": "ek intaraiktiv tui mein apane ftp aur sftp sarvar mainej karana"
+    },
+    {
+      "loc": "NKS_SHELLPACKS_FTPSFTP_FMCLI_HELP01_BODY",
+      "text": "ftp aur sftp sarvar ko kamaand-lain intarafes ya donon sarvar protokol ke lie bane intaraiktiv tui se mainej kiya ja sakata hai. tui set do alag-alag yoozar intarafes deta hai: ftp mainejament tui aur sftp mainejament tui. tui dabal-pain vaale hote hain, jisaka matalab hai ki aap ek hee samay mein do daayarektaree ke saath kaam kar sakate hain, bilkul total kamaandar kee tarah. aap fail opareshan bhee kar sakate hain, jaise daunalod, apalod, kopee, moov, dileet, vagairah."
+    },
+    {
+      "loc": "NKS_SHELLPACKS_MAIL_TUI_HELP01_TITLE",
+      "text": "ee-mel maisej mainej karana"
+    },
+    {
+      "loc": "NKS_SHELLPACKS_MAIL_TUI_HELP01_DESC",
+      "text": "mel tui aapake ee-mel maisej ko mainej karata hai"
+    },
+    {
+      "loc": "NKS_SHELLPACKS_MAIL_TUI_HELP01_BODY",
+      "text": "apane ee-mel maisej ke saath zyaada achchhe se kaam karane ke lie, aap is intaraiktiv tui ka istemaal karake apane maisej ko zyaada achchhe se padh sakate hain, bas ek simpal tekst yoozar intarafes ke saath, jisamen pahale pen mein daayarektaree aur doosare pen mein maisej kee list hotee hai. jab aap aintair dabaakar koee maisej kholate hain, to aapako ek inphoboks mein ek tekst maisej milega."
+    },
+    {
+      "loc": "NKS_SHELLPACKS_MAIL_TUI_HELP02_TITLE",
+      "text": "mel ka otomaitik pata lagaana"
+    },
+    {
+      "loc": "NKS_SHELLPACKS_MAIL_TUI_HELP02_DESC",
+      "text": "mel sarvar ka otomaitik pata lagaana"
+    },
+    {
+      "loc": "NKS_SHELLPACKS_MAIL_TUI_HELP02_BODY",
+      "text": "mel sistam aam taur par aapake us ee-mel edres ke aadhaar par un mel sarvar ka otomaitik pata lagaata hai jinaka istemaal kiya jaega, jisaka istemaal aapane apane akaunt mein sain in karate samay kiya tha. konfigareshan modyool ke baikend ke taur par thandarabard otokonfig ka istemaal karake, aapaka mel sarvar otomaitik pata chal jaega."
+    },
+    {
+      "loc": "NKS_SHELLPACKS_RSS_READERCLI_HELP01_TITLE",
+      "text": "rss feed padhana"
+    },
+    {
+      "loc": "NKS_SHELLPACKS_RSS_READERCLI_HELP01_DESC",
+      "text": "ek skreen mein aapake rss feed"
+    },
+    {
+      "loc": "NKS_SHELLPACKS_RSS_READERCLI_HELP01_BODY",
+      "text": "is intaraiktiv tui mein rss feed padhana aasaan ho gaya hai! aap ek rss feed chun sakate hain aur seedhe daen pen par aartikal padh sakate hain."
     }
   ]
 }
