--- a/public/Nitrocid.Addons/Nitrocid.ShellPacks/Resources/Languages/mal.json
+++ b/public/Nitrocid.Addons/Nitrocid.ShellPacks/Resources/Languages/mal.json
@@ -2572,6 +2572,54 @@
     {
       "loc": "NKS_SHELLPACKS_JSON_COMMAND_SET_ARGUMENT_JSONVALUE_DESC",
       "text": "nilai JSON"
+    },
+    {
+      "loc": "NKS_SHELLPACKS_FTPSFTP_FMCLI_HELP01_TITLE",
+      "text": "Mengurus pelayan FTP dan SFTP"
+    },
+    {
+      "loc": "NKS_SHELLPACKS_FTPSFTP_FMCLI_HELP01_DESC",
+      "text": "Mengurus pelayan FTP dan SFTP anda dalam TUI interaktif"
+    },
+    {
+      "loc": "NKS_SHELLPACKS_FTPSFTP_FMCLI_HELP01_BODY",
+      "text": "Pelayan FTP dan SFTP boleh diuruskan sama ada melalui antara muka baris arahan atau melalui TUI interaktif yang dibina untuk kedua-dua protokol pelayan. Set TUI menyediakan dua antara muka pengguna berasingan: pengurusan FTP TUI dan pengurusan SFTP TUI. TUI mempunyai panel berganda, bermakna anda boleh mengendalikan dua direktori sekaligus, sama seperti Total Commander. Anda juga boleh melakukan operasi fail, seperti memuat turun, memuat naik, menyalin, memindahkan, memadam dan sebagainya."
+    },
+    {
+      "loc": "NKS_SHELLPACKS_MAIL_TUI_HELP01_TITLE",
+      "text": "Mengurus mesej e-mel"
+    },
+    {
+      "loc": "NKS_SHELLPACKS_MAIL_TUI_HELP01_DESC",
+      "text": "Mail TUI mengurus mesej e-mel anda"
+    },
+    {
+      "loc": "NKS_SHELLPACKS_MAIL_TUI_HELP01_BODY",
+      "text": "Untuk mengendalikan mesej e-mel anda dengan lebih cekap, anda boleh menggunakan TUI interaktif ini untuk membaca mesej anda dengan lebih cekap hanya dengan antara muka pengguna teks yang mudah, dengan panel pertama menyenaraikan direktori dan panel kedua menyenaraikan mesej. Apabila anda membuka mesej dengan menekan ENTER, anda akan mendapat mesej teks dalam kotak maklumat."
+    },
+    {
+      "loc": "NKS_SHELLPACKS_MAIL_TUI_HELP02_TITLE",
+      "text": "Pengesanan automatik mel"
+    },
+    {
+      "loc": "NKS_SHELLPACKS_MAIL_TUI_HELP02_DESC",
+      "text": "Pengesanan automatik pelayan mel"
+    },
+    {
+      "loc": "NKS_SHELLPACKS_MAIL_TUI_HELP02_BODY",
+      "text": "Sistem mel secara amnya mengesan pelayan mel yang akan digunakan secara automatik berdasarkan alamat e-mel anda yang anda gunakan semasa log masuk ke akaun anda. Dengan menggunakan Thunderbird Autoconfig sebagai bahagian belakang modul konfigurasi, pelayan mel anda akan ditentukan secara automatik."
+    },
+    {
+      "loc": "NKS_SHELLPACKS_RSS_READERCLI_HELP01_TITLE",
+      "text": "Membaca suapan RSS"
+    },
+    {
+      "loc": "NKS_SHELLPACKS_RSS_READERCLI_HELP01_DESC",
+      "text": "Suapan RSS anda dalam satu skrin"
+    },
+    {
+      "loc": "NKS_SHELLPACKS_RSS_READERCLI_HELP01_BODY",
+      "text": "Membaca suapan RSS dalam TUI interaktif ini menjadi lebih mudah! Anda boleh memilih suapan RSS dan membaca artikel terus di panel kanan."
     }
   ]
 }
